<resources>
    <string name="app_name">Health Plus</string>
    <string name="contrasenia">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_pacientes_list">pacientesList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_registro">Registro</string>
    <string name="title_notifications">Notificasiones</string>
    <string name="title_pacientes">Pacientes</string>
    <string name="avatar">Avatar</string>
    <string name="guionbajo">-</string>
    <string name="warning">Warning</string>
    <string name="detalles">Detalles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="tipo_de_sangre">Tipo de Sangre</string>
    <string name="title_activity_inicio">Leanback InicioActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>