<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_corners_background"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageView" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guionbajo"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/icon_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_id"
        app:layout_constraintEnd_toStartOf="@id/icon_warning" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guionbajo"
        app:layout_constraintStart_toEndOf="@id/icon_avatar"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/icon_warning" />

    <ImageButton
        android:id="@+id/icon_warning"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/warning"
        android:src="@drawable/ic_warning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/icon_document"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/icon_document"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/detalles"
        android:src="@drawable/ic_document"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
