<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">

    <TextView
        android:id="@+id/txtBienvenida"
        style="@style/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Inicio de sesión"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagenBienvenida"
        android:layout_width="179dp"
        android:layout_height="163dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logohealth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBienvenida" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_input_layout"
        app:layout_constraintTop_toBottomOf="@id/imagenBienvenida">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:background="@drawable/rounded_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contrasenaInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasenia"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:background="@drawable/rounded_edit_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:background="@color/material_dynamic_neutral0"
        android:text="@string/enviar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contrasenaInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
